# advaita-vedanta-benchmark

./: .env.example  .gitignore  README.md  complete_run.sh  make_dashboard.py  pyproject.toml  quick_judge.py
config/: default.yaml  models.yaml
corpus/: SOURCES.md  sources.yaml
docs/: JUDGING.md  METHODOLOGY.md  RUBRICS.md  blog.html  data.js  index.html  og-card.html
docs/tweet-assets/: THREAD.md
harness/: __init__.py  cli.py  judge.py  providers.py  registry.py  report.py  runner.py  schema.py  tasks.py
judges/: consistency_judge.txt  rubric_judge.txt  rubric_judge_strict.txt
results/: normalized.json
scripts/: fetch_corpus.py  normalize_scores.py  validate_tasks.py
tasks/: concept_precision.yaml  consistency_adversarial.yaml  level_of_reality.yaml  misconception_repair.yaml  open_elicitation.yaml  schema.json  school_discrimination.yaml  sustained_dialectic.yaml  text_grounded.yaml
tests/: test_harness.py
