[project]
name = "advaita-bench"
version = "0.1.0"
description = "Research-grade benchmark for Advaita Vedānta doctrinal competence in LLMs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pyyaml>=6.0",
  "pydantic>=2.0",
  "openai>=1.0",
  "anthropic>=0.40",
  "jinja2>=3.1",
  "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
advaita-bench = "harness.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["harness*"]

[tool.ruff]
line-length = 100
